--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                         <div class="card-body">
                           <h5 class="card-title">PET SHOP</h5>
                           <p class="card-text">Designed a pet shop to provide details about the pets and the service provided from them to pets. t. </p>
-                          <a href="#" class="btn btn-primary">Portfolio</a>
+                          <a href="#" class="btn btn-primary"></a>
                         </div>
                       </div>
                   </div>           
